# dashboard_velus

./: .dockerignore  .env.example  .gitignore  AGENT.md  API - IXC Provedor.postman_collection.json  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
apps/analytics/: apps.py  models.py  signals.py  tasks.py
apps/analytics/application/: aggregations.py  churn_digest.py  churn_ml.py  churn_risk.py  cto_snapshots.py  dissatisfaction.py  network_snapshots.py  qa_review.py  rebuild.py
apps/analytics/infrastructure/: models.py
apps/analytics/migrations/: 0001_initial.py  0002_factexpense.py  0003_plano_contas_cache.py  0004_churnriskscore.py  0005_churnriskscore_ml_probability_churnriskmodel.py  0006_churnriskmodel_val_accuracy_churnriskmodel_val_auc.py  0007_fornecedorcache.py  0008_factnetworksnapshot.py  0009_factinvoice_late_fee_amount.py  0010_alter_dimcontract_source_type_and_more.py  0011_qareview.py  0012_factctosnapshot.py  0013_factctosnapshot_timestamps.py
apps/atendimento/: admin.py  apps.py  tasks.py
apps/atendimento/application/: messages.py  redaction.py  sync.py
apps/atendimento/domain/: bots.py  dto.py  ports.py
apps/atendimento/infrastructure/: models.py  repositories.py
apps/atendimento/migrations/: 0001_initial.py
apps/customers/: admin.py  apps.py  models.py
apps/customers/domain/: dto.py  ports.py  services.py
apps/customers/infrastructure/: models.py  repositories.py
apps/customers/migrations/: 0001_initial.py  0002_historicalcontract_contract.py  0003_add_addon_discount_amounts.py  0004_alter_contract_source_type_and_more.py
apps/dashboards/: apps.py  charts.py  context_processors.py  urls.py  views.py
apps/financial/: admin.py  apps.py  models.py
apps/financial/domain/: dto.py  ports.py
apps/financial/infrastructure/: models.py  repositories.py
apps/financial/migrations/: 0001_initial.py  0002_historicalexpense_expense.py  0003_expense_deleted_at_historicalexpense_deleted_at_and_more.py  0004_alter_expense_source_type_and_more.py
apps/helpdesk/: admin.py  apps.py
apps/helpdesk/application/: os_classification.py  os_lookups.py  sla.py  technician_stats.py
apps/helpdesk/domain/: dto.py  ports.py
apps/helpdesk/infrastructure/: models.py  repositories.py
apps/helpdesk/migrations/: 0001_initial_ticket.py  0002_oslookupcache.py  0003_alter_historicalticket_source_type_and_more.py
apps/integrations/anthropic/: __init__.py  client.py
apps/integrations/fake/: apps.py  atendimento.py  bandwidth.py  connections.py  contracts.py  customers.py  equipment.py  expenses.py  invoices.py  leads.py  opportunities.py  tickets.py
apps/integrations/gemini/: __init__.py  client.py
apps/integrations/ixc/: README.md  apps.py  bandwidth.py  client.py  connections.py  contracts.py  customers.py  equipment.py  expenses.py  invoices.py  leads.py  opportunities.py  payments.py  plans.py  schemas.py  tickets.py
apps/integrations/opa/: apps.py  atendimento.py  client.py  schemas.py
apps/integrations/shared/: apps.py  enums.py  exceptions.py  http_client.py  registry.py
apps/inventory/: admin.py
apps/inventory/domain/: dto.py  ports.py
apps/inventory/infrastructure/: models.py  repositories.py
apps/inventory/migrations/: 0001_initial.py  0002_alter_contractequipment_source_type_and_more.py
apps/mcp/: apps.py  models.py  registry.py  server.py
apps/mcp/migrations/: 0001_initial.py
apps/network/: admin.py
apps/network/domain/: dto.py  ports.py
apps/network/infrastructure/: models.py  repositories.py
apps/network/migrations/: 0001_initial.py  0002_historicalbandwidthusage_bandwidthusage.py  0003_alter_bandwidthusage_source_type_and_more.py
apps/sales/: admin.py  apps.py
apps/sales/domain/: dto.py  ports.py
apps/sales/infrastructure/: models.py  repositories.py
apps/sales/migrations/: 0001_initial.py  0002_alter_historicallead_source_type_and_more.py
apps/scenarios/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/scenarios/domain/: defaults.py  services.py
apps/scenarios/infrastructure/: models.py
apps/scenarios/migrations/: 0001_initial.py
apps/shared/: __init__.py  apps.py  audit.py  context.py  context_processors.py  decorators.py  exceptions.py  fields.py  managers.py  middleware.py  mixins.py  models.py
apps/shared/value_objects/: __init__.py  money.py  percentage.py
apps/sync/: admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
apps/sync/migrations/: 0001_initial.py  (+5 more)
apps/sync/templates/sync/: status.html  (+3 more)
apps/tenancy/: adapters.py  admin.py  apps.py  forms.py  managers.py  models.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: _env.py  base.py  development.py  production.py  test.py
templates/account/: _auth_base.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html
templates/admin/: base_site.html
tests/: conftest.py  test_at_risk_blocked.py  test_atendimento_dashboard.py  test_atendimento_e2e.py  test_bandwidth_e2e.py  test_bootstrap_all.py  test_cash_mismatch.py  test_cash_received_series.py  test_churn_enhancements.py  test_churn_risk.py  test_compromissos_futuros.py  test_contract_kpi_trend.py  test_conversas_ruins_dashboard.py  test_customer_360.py  test_customer_filters.py  test_delinquency_late_fee.py  test_delinquency_recoverable_scope.py  test_domain_value_objects.py  test_dre_managerial_tiers.py  test_dre_revenue_split.py  test_dre_section_mapping.py  test_encryption.py  test_equipment_e2e.py  test_executive_cash.py  test_fact_rebuild.py  test_financial_e2e.py  test_helpdesk_e2e.py  test_ixc_adapter.py  test_mao_de_obra_padding.py  test_mcp_server.py  test_network_e2e.py  test_network_snapshots.py  test_offline_active_customers.py  test_opa_adapter.py  test_os_classification.py  test_os_dashboard.py  test_os_lookups.py  test_priority_customers.py  test_qa_dashboard.py  test_qa_supervisor.py  (+14 more)
tests/playwright/: conftest.py  test_dashboards.py  test_login_page.py
(+61 files in other folders)
